[gd_scene load_steps=5 format=3 uid="uid://xikh38b6u7t2"]

[ext_resource type="Script" path="res://Scripts/engineer_minigame.gd" id="1_6ybis"]

[sub_resource type="LabelSettings" id="LabelSettings_jj7ba"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_x2ej8"]

[sub_resource type="LabelSettings" id="LabelSettings_xa8mu"]
font_size = 18

[node name="ChipExtractionMinigame" type="CanvasLayer"]
script = ExtResource("1_6ybis")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 81.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "ดึงชิปประมวลผล
"
label_settings = SubResource("LabelSettings_jj7ba")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "กดค้างเพื่อเพิ่มแรงดึง - ปล่อยเพื่อหยุด"
label_settings = SubResource("LabelSettings_x2ej8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ForceLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "แรงดึง: 0%"
label_settings = SubResource("LabelSettings_xa8mu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "ความเสียหาย: 0%"
label_settings = SubResource("LabelSettings_xa8mu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameArea" type="Control" parent="Panel"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -144.0
offset_right = 300.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChipSlot" type="ColorRect" parent="Panel/GameArea"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.393086, 0.393086, 0.393085, 1)

[node name="ChipSprite" type="ColorRect" parent="Panel/GameArea"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.622075, 0.430034, 0.174364, 1)

[node name="ForceBar" type="ProgressBar" parent="Panel/GameArea"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -30.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false
